Fix darkmode button on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -567,6 +567,7 @@ h1, h2, h3, h4, h5, h6, figure {
 				font-weight: bold;
 				background: lighten($brand-black,90%);
 				@include border-radius(4px);
+				white-space: nowrap;
 				@media screen and (max-width: $screen-sm) {
 					float: left;
 					margin-bottom: 0;
